--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,9 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.0')
+    testImplementation ("com.codeborne:selenide:6.19.1")
+    testImplementation platform('org.junit:junit-bom:5.10.0')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
 
 }
 
