--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
 
     testImplementation ("com.codeborne:selenide:6.19.1")
     testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
 
 }
 
